Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32247

QBluetoothLocalDevice never emits pairingFinished() signal on QNX

    XMLWordPrintable

Details

    • d7ab00bac1d94bfdca412fab47a0d125f70bcb3a

    Description

      Based on code inspection pairing requests are never acknowledged by way of notifying the user about the success or failure. Please see tst_qbluetoothlocalDevice for reference behavior.

      The same applies to the error(PairingError) signal which should be emitted if e.g. a valid (but not within reach) Bt address is passed.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bomb3rman Fabian Bumberger
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes