QNX: Emit pairing finished signal

Pairing finished signal is emitted after pairing was requested.
Also fixes a typo and a bug where the q Pointer was not saved.

Task-number: QTBUG-32247

Change-Id: Ia2d32fdafd9510908f278edda927071199326f5d
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>